prod-deploy-svc/prod.yaml
### Create deployment and svc for hello-prod app ###
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-prod
  namespace: test02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-prod
  template:
    metadata:
      labels:
        app: hello-prod
    spec:
      containers:
      - name: hello-prod
        image: vaibhavdeshwal/hello-prod
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: hello-prod
  namespace: test02
spec:
  selector:
    app: hello-prod
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
